# aoc2025

./: Cargo.toml
benches/: benchmark.rs
src/: lib.rs
